--- a/app/src/main/res/layout/activity_koloro.xml
+++ b/app/src/main/res/layout/activity_koloro.xml
@@ -44,6 +44,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
         android:orientation="horizontal"
         android:layout_gravity="center_horizontal">
       <TextView
@@ -56,5 +57,14 @@
           android:layout_width="wrap_content"
           android:layout_height="wrap_content" />
     </LinearLayout>
+
+    <Button
+        android:id="@+id/start_capture"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/start_capture_button"
+        android:background="?attr/colorAccent"
+        />
+
   </LinearLayout>
 </android.support.design.widget.CoordinatorLayout>
