--- a/app/src/main/res/layout/activity_capture.xml
+++ b/app/src/main/res/layout/activity_capture.xml
@@ -8,6 +8,7 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="what up what up"
+      android:background="@android:color/holo_green_dark"
       />
 
 </LinearLayout>
