--- a/app/src/main/res/layout/activity_capture.xml
+++ b/app/src/main/res/layout/activity_capture.xml
@@ -1,13 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
   <TextView
+      android:id="@+id/captureButton"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="what up what up"
+      android:text="Capture"
+      android:background="@color/colorPrimary"
+      />
+
+  <TextView
+      android:id="@+id/cancelButton"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="Cancel"
       android:background="@android:color/holo_green_dark"
       />
 
