--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,8 @@
   <dimen name="activity_horizontal_margin">16dp</dimen>
   <dimen name="activity_vertical_margin">16dp</dimen>
 
-  <dimen name="overlay_width">144dp</dimen>
-  <dimen name="overlay_height">25dp</dimen>
+  <dimen name="overlay_buttons_width">144dp</dimen>
+  <dimen name="overlay_buttons_height">25dp</dimen>
+  <dimen name="overlay_loading_width">144dp</dimen>
+  <dimen name="overlay_loading_height">1800dp</dimen>
 </resources>
