--- a/app/src/main/res/layout/activity_color_picker.xml
+++ b/app/src/main/res/layout/activity_color_picker.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -9,4 +10,24 @@
       android:layout_height="match_parent"
       />
 
-</FrameLayout>
+  <FrameLayout
+      android:id="@+id/color_frame"
+      android:layout_width="120dp"
+      android:layout_height="60dp"
+      android:layout_marginTop="20dp"
+      android:layout_marginLeft="30dp"
+      android:background="@android:color/holo_blue_dark">
+
+    <EditText
+        android:id="@+id/hex_text"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:layout_gravity="center_vertical|end"
+        android:layout_marginRight="3dp"
+        android:inputType="none"
+        android:background="@android:color/transparent"
+        tools:text="#00000"
+        />
+  </FrameLayout>
+
+</RelativeLayout>
