--- a/app/src/main/res/layout/activity_color_picker.xml
+++ b/app/src/main/res/layout/activity_color_picker.xml
@@ -10,19 +10,22 @@
       android:layout_height="match_parent"
       />
 
-  <LinearLayout
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
+  <FrameLayout
+      android:id="@+id/color_details_layout"
+      android:layout_width="200dp"
+      android:layout_height="60dp"
       android:layout_marginTop="20dp"
       android:layout_marginLeft="30dp"
-      android:orientation="horizontal"
-      >
-    <FrameLayout
-        android:id="@+id/color_frame"
-        android:layout_width="120dp"
-        android:layout_height="60dp"
-        android:background="@android:color/holo_blue_dark">
+      android:visibility="gone"
+      tools:visibility="visible"
+      android:background="@android:color/holo_blue_dark">
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:orientation="horizontal"
+        >
       <EditText
           android:id="@+id/hex_text"
           android:layout_width="wrap_content"
@@ -33,14 +36,13 @@
           android:background="@android:color/transparent"
           tools:text="#00000"
           />
-    </FrameLayout>
-    <Button
-        android:id="@+id/copy_button"
-        android:layout_width="wrap_content"
-        android:layout_height="60dp"
-        android:text="@string/copy_button"
-        />
-  </LinearLayout>
-
+      <Button
+          android:id="@+id/copy_button"
+          android:layout_width="wrap_content"
+          android:layout_height="60dp"
+          android:text="@string/copy_button"
+          />
+    </LinearLayout>
+  </FrameLayout>
 
 </RelativeLayout>
