--- a/app/src/main/res/layout/activity_color_picker.xml
+++ b/app/src/main/res/layout/activity_color_picker.xml
@@ -15,6 +15,7 @@
       android:layout_width="200dp"
       android:layout_height="60dp"
       android:layout_marginTop="20dp"
+      android:layout_marginBottom="20dp"
       android:layout_marginLeft="30dp"
       android:visibility="gone"
       tools:visibility="visible"
