--- a/app/src/main/res/layout/capture_buttons_overlay.xml
+++ b/app/src/main/res/layout/capture_buttons_overlay.xml
@@ -2,22 +2,27 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_gravity="end">
 
-  <TextView
-      android:id="@+id/captureButton"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="Capture"
-      android:background="@color/colorPrimary"
+  <ImageButton
+      android:id="@+id/cancelButton"
+      android:layout_width="0dp"
+      android:layout_height="match_parent"
+      android:layout_weight="1"
+      android:src="@drawable/ic_clear_white_24dp"
+      android:background="@android:color/holo_green_dark"
+      android:contentDescription="@string/cancel_overlay_description"
       />
 
-  <TextView
-      android:id="@+id/cancelButton"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="Cancel"
-      android:background="@android:color/holo_green_dark"
+  <ImageButton
+      android:id="@+id/captureButton"
+      android:layout_width="0dp"
+      android:layout_height="match_parent"
+      android:layout_weight="1"
+      android:src="@drawable/ic_camera_white_24dp"
+      android:background="@color/colorPrimary"
+      android:contentDescription="@string/capture_screen_description"
       />
 
 </LinearLayout>
