--- a/app/src/main/res/layout/activity_color_picker.xml
+++ b/app/src/main/res/layout/activity_color_picker.xml
@@ -10,9 +10,10 @@
       android:layout_height="match_parent"
       />
 
+
   <FrameLayout
       android:id="@+id/color_details_layout"
-      android:layout_width="200dp"
+      android:layout_width="150dp"
       android:layout_height="60dp"
       android:layout_marginTop="20dp"
       android:layout_marginBottom="20dp"
@@ -21,29 +22,30 @@
       tools:visibility="visible"
       android:background="@android:color/holo_blue_dark">
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/hex_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="end"
-        android:orientation="horizontal"
-        >
-      <EditText
-          android:id="@+id/hex_text"
-          android:layout_width="wrap_content"
-          android:layout_height="30dp"
-          android:layout_gravity="center_vertical|end"
-          android:layout_marginRight="3dp"
-          android:inputType="none"
-          android:background="@android:color/transparent"
-          tools:text="#00000"
-          />
-      <Button
-          android:id="@+id/copy_button"
-          android:layout_width="wrap_content"
-          android:layout_height="60dp"
-          android:text="@string/copy_button"
-          />
-    </LinearLayout>
+        android:layout_gravity="center"
+        android:layout_marginRight="3dp"
+        android:background="@android:color/transparent"
+        android:textSize="25dp"
+        tools:text="#00000"
+        />
   </FrameLayout>
+
+  <ImageButton
+      android:id="@+id/copy_button"
+      android:layout_width="40dp"
+      android:layout_height="60dp"
+      android:layout_toRightOf="@+id/color_details_layout"
+      android:layout_marginTop="20dp"
+      android:visibility="gone"
+      tools:visibility="visible"
+      android:src="@drawable/ic_content_copy_black_24dp"
+      />
+
+
+
 
 </RelativeLayout>
