--- a/app/src/main/res/layout/activity_koloro.xml
+++ b/app/src/main/res/layout/activity_koloro.xml
@@ -11,108 +11,59 @@
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_marginTop="?attr/actionBarSize"
-      android:padding="15dp"
       android:orientation="vertical"
-      android:gravity="center_horizontal">
-
-    <TextView
+      android:layout_marginTop="?attr/actionBarSize"
+      >
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="start"
-        android:layout_marginTop="20dp"
-        android:text="@string/preferences_label"
-        android:textAllCaps="true"
-        android:textAlignment="viewStart" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:padding="15dp"
         android:orientation="horizontal"
-        android:layout_gravity="center_horizontal">
-      <TextView
-          android:layout_width="0dp"
-          android:layout_height="wrap_content"
-          android:layout_weight="1"
-          android:text="@string/show_notification_label" />
-      <Switch
-          android:id="@+id/switch_show_notification"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content" />
-    </LinearLayout>
+        android:gravity="center_horizontal">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center_horizontal">
-      <TextView
-          android:layout_width="0dp"
+      <Button
+          android:id="@+id/start_capture"
           android:layout_height="wrap_content"
-          android:layout_weight="1"
-          android:text="Capture button position" />
-      <Spinner
-          android:id="@+id/spinner_capture_button_position"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content" />
-    </LinearLayout>
+          android:layout_width="290dp"
+          android:layout_alignParentLeft="true"
+          android:text="@string/start_capture_button"
+          android:background="?attr/colorAccent"
+          />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center_horizontal">
-      <TextView
-          android:layout_width="0dp"
+      <ImageButton
+          android:id="@+id/prefs_button"
+          android:layout_width="50dp"
+          android:layout_height="50dp"
+          android:layout_toRightOf="@+id/start_capture"
+          android:layout_alignParentRight="true"
+          android:src="@drawable/ic_colorize_white_24dp"
+          android:background="@color/colorPrimaryDark"
+          />
+
+      <LinearLayout
+          android:id="@+id/prefs_layout"
+          android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:layout_weight="1"
-          android:text="@string/store_captures_label" />
-      <Switch
-          android:id="@+id/switch_store_captures"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content" />
-    </LinearLayout>
+          android:layout_below="@id/start_capture"
+          android:layout_marginTop="@dimen/prefs_layout_margin_top"
+          android:orientation="vertical"
+          android:visibility="invisible"
+          tools:visibility="visible"
+          android:background="@color/colorPrimaryDark"
+          >
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:text="Hello"
+            />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_gravity="center_horizontal">
-      <TextView
-          android:layout_width="0dp"
-          android:layout_height="wrap_content"
-          android:layout_weight="1"
-          android:text="@string/multi_shot_label" />
-      <Switch
-          android:id="@+id/switch_multi_shot"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content" />
-    </LinearLayout>
+      </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:orientation="horizontal"
-        android:layout_gravity="center_horizontal">
-      <TextView
-          android:layout_width="0dp"
-          android:layout_height="wrap_content"
-          android:layout_weight="1"
-          android:text="@string/capture_button_visible_label" />
-      <Switch
-          android:id="@+id/switch_capture_button_visible"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content" />
-    </LinearLayout>
+    </RelativeLayout>
 
-    <Button
-        android:id="@+id/start_capture"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/start_capture_button"
-        android:background="?attr/colorAccent"
-        />
+
 
   </LinearLayout>
+
+
 </android.support.design.widget.CoordinatorLayout>
