--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,4 +25,11 @@
     <item name="android:statusBarColor">@android:color/transparent</item>
   </style>
 
+  <style name="PrefsText">
+    <item name="android:textColor">@android:color/white</item>
+    <item name="android:layout_width">0dp</item>
+    <item name="android:layout_height">wrap_content</item>
+    <item name="android:layout_weight">1</item>
+  </style>
+
 </resources>
