--- a/app/src/main/res/layout/activity_koloro.xml
+++ b/app/src/main/res/layout/activity_koloro.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.KoloroActivity">
+    tools:context=".ui.KoloroActivity"
+    >
 
   <include layout="@layout/toolbar"/>
 
@@ -24,7 +26,8 @@
       <Button
           android:id="@+id/start_capture"
           android:layout_height="wrap_content"
-          android:layout_width="290dp"
+          android:layout_width="match_parent"
+          android:layout_marginRight="@dimen/start_button_margin_right"
           android:layout_alignParentLeft="true"
           android:text="@string/start_capture_button"
           android:background="@color/colorAccent"
@@ -34,7 +37,6 @@
           android:id="@+id/prefs_button"
           android:layout_width="50dp"
           android:layout_height="50dp"
-          android:layout_toRightOf="@+id/start_capture"
           android:layout_alignParentRight="true"
           android:src="@drawable/ic_colorize_white_24dp"
           android:background="@color/colorPrimaryDark"
