--- a/app/src/main/res/layout/activity_color_picker.xml
+++ b/app/src/main/res/layout/activity_color_picker.xml
@@ -69,6 +69,14 @@
   </LinearLayout>
 
 
+  <android.support.v7.widget.RecyclerView
+      android:id="@+id/color_list_recycler"
+      android:layout_width="80dp"
+      android:layout_height="wrap_content"
+      android:layout_alignParentRight="true"
+    />
+
+
 
 
 
