--- a/app/src/main/res/layout/activity_color_picker.xml
+++ b/app/src/main/res/layout/activity_color_picker.xml
@@ -1,84 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    >
 
-  <ImageView
-      android:id="@+id/screen_capture_image"
+  <RelativeLayout
       android:layout_width="match_parent"
-      android:layout_height="match_parent"
-      />
+      android:layout_height="match_parent">
 
-  <LinearLayout
-      android:id="@+id/color_details_parent"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_marginTop="20dp"
-      android:layout_marginBottom="20dp"
-      android:layout_marginLeft="30dp"
-      android:padding="3dp"
-      android:orientation="horizontal"
-      android:background="@drawable/color_picker_parent_background"
-      android:visibility="gone"
-      tools:visibility="visible"
-      >
-
-    <FrameLayout
-        android:id="@+id/color_details_layout"
-        android:layout_width="150dp"
-        android:layout_height="80dp"
-        android:background="@drawable/color_picker_background">
-
-      <TextView
-          android:id="@+id/hex_text"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:layout_gravity="center"
-          android:layout_marginRight="3dp"
-          android:background="@android:color/transparent"
-          android:textSize="25dp"
-          tools:text="#00000"
-          />
-    </FrameLayout>
+    <ImageView
+        android:id="@+id/screen_capture_image"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
 
     <LinearLayout
+        android:id="@+id/color_details_parent"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:layout_toRightOf="@+id/color_details_layout"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginLeft="30dp"
+        android:padding="3dp"
+        android:orientation="horizontal"
+        android:background="@drawable/color_picker_parent_background"
+        android:visibility="gone"
+        tools:visibility="visible"
         >
-      <ImageButton
-          android:id="@+id/save_button"
-          android:layout_width="40dp"
-          android:layout_height="40dp"
-          android:src="@drawable/ic_save_black_24dp"
-          style="@style/Widget.AppCompat.Button.Borderless"
-          />
-      <ImageButton
-          android:id="@+id/copy_button"
-          android:layout_width="40dp"
-          android:layout_height="40dp"
-          android:src="@drawable/ic_content_copy_black_24dp"
-          style="@style/Widget.AppCompat.Button.Borderless"
-          />
+
+      <FrameLayout
+          android:id="@+id/color_details_layout"
+          android:layout_width="150dp"
+          android:layout_height="80dp"
+          android:background="@drawable/color_picker_background">
+
+        <TextView
+            android:id="@+id/hex_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginRight="3dp"
+            android:background="@android:color/transparent"
+            android:textSize="25dp"
+            tools:text="#00000"
+            />
+      </FrameLayout>
+
+      <LinearLayout
+          android:layout_width="wrap_content"
+          android:layout_height="match_parent"
+          android:orientation="vertical"
+          android:layout_toRightOf="@+id/color_details_layout"
+          >
+        <ImageButton
+            android:id="@+id/save_button"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/ic_save_black_24dp"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            />
+        <ImageButton
+            android:id="@+id/copy_button"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/ic_content_copy_black_24dp"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            />
+      </LinearLayout>
     </LinearLayout>
 
+  </RelativeLayout>
 
+  <FrameLayout
+      android:layout_width="wrap_content"
+      android:layout_height="match_parent"
+      android:background="@color/colorAccent"
+      android:layout_gravity="end"
+      >
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/color_list_recycler"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        />
 
-  </LinearLayout>
+  </FrameLayout>
 
-
-  <android.support.v7.widget.RecyclerView
-      android:id="@+id/color_list_recycler"
-      android:layout_width="80dp"
-      android:layout_height="wrap_content"
-      android:layout_alignParentRight="true"
-    />
-
-
-
-
-
-
-</RelativeLayout>
+</android.support.v4.widget.DrawerLayout>
