--- a/app/src/main/res/layout/color_recycler_item.xml
+++ b/app/src/main/res/layout/color_recycler_item.xml
@@ -2,13 +2,13 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/color_item_frame"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="120dp">
 
   <TextView
       android:id="@+id/color_item_text"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:text="TEST"
+      android:layout_gravity="center"
       />
 
 </FrameLayout>
