--- a/app/src/main/res/layout/activity_color_picker.xml
+++ b/app/src/main/res/layout/activity_color_picker.xml
@@ -25,7 +25,7 @@
         android:layout_marginBottom="20dp"
         android:layout_marginLeft="30dp"
         android:padding="3dp"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:background="@drawable/color_picker_parent_background"
         android:visibility="gone"
         tools:visibility="visible"
@@ -33,7 +33,7 @@
 
       <FrameLayout
           android:id="@+id/color_details_layout"
-          android:layout_width="150dp"
+          android:layout_width="180dp"
           android:layout_height="80dp"
           android:background="@drawable/color_picker_background">
 
@@ -52,21 +52,24 @@
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
-          android:orientation="vertical"
+          android:orientation="horizontal"
+          android:layout_gravity="end"
           android:layout_toRightOf="@+id/color_details_layout"
           >
-        <ImageButton
+        <Button
             android:id="@+id/save_button"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/ic_save_black_24dp"
+            android:layout_width="wrap_content"
+            android:layout_height="33dp"
+            android:text="@string/save_button"
+            android:textSize="12sp"
             style="@style/Widget.AppCompat.Button.Borderless"
             />
-        <ImageButton
+        <Button
             android:id="@+id/copy_button"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/ic_content_copy_black_24dp"
+            android:layout_width="wrap_content"
+            android:layout_height="33dp"
+            android:text="@string/copy_button"
+            android:textSize="12sp"
             style="@style/Widget.AppCompat.Button.Borderless"
             />
       </LinearLayout>
@@ -82,7 +85,7 @@
       >
     <android.support.v7.widget.RecyclerView
         android:id="@+id/color_list_recycler"
-        android:layout_width="150dp"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         />
 
