--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
   <color name="colorAccent">#B2FF59</color>
 
   <color name="saved_colors_drawer_background">#5c4e4c4c</color>
+  <color name="picker_background_grey">#b0bec5</color>
+  <color name="picker_background_grey_opaque">#58b0bec5</color>
 </resources>
