--- a/app/src/main/res/layout/activity_koloro.xml
+++ b/app/src/main/res/layout/activity_koloro.xml
@@ -25,10 +25,12 @@
 
       <Button
           android:id="@+id/start_capture"
-          android:layout_height="wrap_content"
+          android:layout_height="60dp"
           android:layout_width="match_parent"
           android:layout_marginRight="@dimen/start_button_margin_right"
+          android:paddingLeft="@dimen/start_button_margin_right"
           android:layout_alignParentLeft="true"
+          style="?android:attr/borderlessButtonStyle"
           android:text="@string/start_capture_button"
           android:background="@color/colorAccent"
           />
@@ -36,105 +38,48 @@
       <ImageButton
           android:id="@+id/prefs_button"
           android:layout_width="50dp"
-          android:layout_height="50dp"
+          android:layout_height="60dp"
           android:layout_alignParentRight="true"
-          android:src="@drawable/ic_colorize_white_24dp"
-          android:background="@color/colorPrimaryDark"
+          style="?android:attr/borderlessButtonStyle"
+          android:background="@color/colorAccent"
+          android:src="@drawable/ic_settings_black_24dp"
           />
 
-      <LinearLayout
+      <Button
+          android:id="@+id/help_button"
+          android:layout_width="match_parent"
+          android:layout_height="60dp"
+          android:layout_marginTop="20dp"
+          android:layout_below="@id/start_capture"
+          style="?android:attr/borderlessButtonStyle"
+          android:text="How to use"
+          android:background="@color/colorAccent"
+          />
+
+      <android.support.v7.widget.RecyclerView
+          android:id="@+id/saved_colors_recycler"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="20dp"
+          android:layout_below="@id/help_button"
+          />
+
+      <FrameLayout
           android:id="@+id/prefs_layout"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
+          android:minHeight="100dp"
           android:layout_below="@id/start_capture"
           android:layout_marginTop="@dimen/prefs_layout_margin_top"
           android:padding="15dp"
-          android:orientation="vertical"
           android:visibility="invisible"
-          tools:visibility="visible"
+          tools:visibility="invisible"
           android:background="@color/colorPrimaryDark"
           >
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="35dp"
-            android:layout_gravity="center_horizontal">
-          <TextView
-              style="@style/PrefsText"
-              android:text="@string/show_notification_label" />
-          <Switch
-              android:id="@+id/switch_show_notification"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content" />
-        </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center_horizontal">
-          <TextView
-              style="@style/PrefsText"
-              android:text="Capture button position" />
-          <Spinner
-              android:id="@+id/spinner_capture_button_position"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content" />
-        </LinearLayout>
+      </FrameLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center_horizontal">
-          <TextView
-              style="@style/PrefsText"
-              android:text="@string/store_captures_label" />
-          <Switch
-              android:id="@+id/switch_store_captures"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center_horizontal">
-          <TextView
-              style="@style/PrefsText"
-              android:text="@string/multi_shot_label" />
-          <Switch
-              android:id="@+id/switch_multi_shot"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:orientation="horizontal"
-            android:layout_gravity="center_horizontal">
-          <TextView
-              style="@style/PrefsText"
-              android:text="@string/capture_button_visible_label" />
-          <Switch
-              android:id="@+id/switch_capture_button_visible"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content" />
-        </LinearLayout>
-      </LinearLayout>
     </com.jameskelly.koloro.ui.layouts.RevealRelativeLayout>
-
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/saved_colors_recycler"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/reveal_layout"
-      />
 
 
   </RelativeLayout>
