--- a/app/src/main/res/layout/activity_koloro.xml
+++ b/app/src/main/res/layout/activity_koloro.xml
@@ -45,16 +45,16 @@
           android:src="@drawable/ic_settings_black_24dp"
           />
 
-      <Button
-          android:id="@+id/help_button"
-          android:layout_width="match_parent"
-          android:layout_height="60dp"
-          android:layout_marginTop="20dp"
-          android:layout_below="@id/start_capture"
-          style="?android:attr/borderlessButtonStyle"
-          android:text="How to use"
-          android:background="@color/colorAccent"
-          />
+      <!--<Button-->
+          <!--android:id="@+id/help_button"-->
+          <!--android:layout_width="match_parent"-->
+          <!--android:layout_height="60dp"-->
+          <!--android:layout_marginTop="20dp"-->
+          <!--android:layout_below="@id/start_capture"-->
+          <!--style="?android:attr/borderlessButtonStyle"-->
+          <!--android:text="How to use"-->
+          <!--android:background="@color/colorAccent"-->
+          <!--/>-->
 
 
         <Button
@@ -65,6 +65,7 @@
             style="?android:attr/borderlessButtonStyle"
             android:text="@string/saved_colors_button"
             android:background="@color/colorAccent"
+            android:visibility="gone"
             />
 
         <android.support.v7.widget.RecyclerView
@@ -75,15 +76,13 @@
             android:visibility="invisible"
             />
 
-
-
       <FrameLayout
           android:id="@+id/prefs_layout"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:minHeight="100dp"
           android:layout_below="@id/start_capture"
-          android:layout_marginTop="@dimen/prefs_layout_margin_top"
+          android:layout_marginTop="5dp"
           android:padding="15dp"
           android:visibility="invisible"
           tools:visibility="invisible"
