--- a/app/src/main/res/layout/fragment_preferences.xml
+++ b/app/src/main/res/layout/fragment_preferences.xml
@@ -5,26 +5,14 @@
     android:layout_height="match_parent"
     >
 
-  <TextView
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"
-      android:layout_gravity="start"
-      android:text="@string/preferences_label"
-      android:textColor="@android:color/white"
-      android:textAllCaps="true"
-      android:textAlignment="viewStart" />
-
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_gravity="center_horizontal">
     <TextView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="@string/capture_button_position"
-        android:textColor="@android:color/white"/>
+        style="@style/PrefsText"
+        android:text="@string/capture_button_position"/>
     <Spinner
         android:id="@+id/spinner_capture_button_position"
         android:layout_width="wrap_content"
@@ -42,11 +30,8 @@
       >
 
     <TextView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="@string/vibration_label"
-        android:textColor="@android:color/white"/>
+        style="@style/PrefsText"
+        android:text="@string/vibration_label"/>
 
     <Switch
         android:id="@+id/switch_vibration"
@@ -62,11 +47,8 @@
       android:orientation="horizontal"
       android:layout_gravity="center_horizontal">
     <TextView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
+        style="@style/PrefsText"
         android:text="@string/store_captures_label"
-        android:textColor="@android:color/white"
         />
     <Switch
         android:id="@+id/switch_store_captures"
@@ -75,7 +57,4 @@
         android:enabled="false"
         />
   </LinearLayout>
-
-
-
 </LinearLayout>
