--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <color name="colorPrimary">#9C27B0</color>
-  <color name="colorPrimaryDark">#7B1FA2</color>
-  <color name="colorAccent">#B2FF59</color>
+  <color name="colorPrimary">#2196F3</color>
+  <color name="colorPrimaryDark">#1976D2</color>
+  <color name="colorPrimaryLight">#BBDEFB</color>
+  <color name="colorAccent">#FF9800</color>
+  <color name="primaryText">#212121</color>
+  <color name="secondaryText">#727272</color>
+  <color name="dividerColor">#B6B6B6</color>
+  <color name="homeBackground">#e1dfdf</color>
 
   <color name="saved_colors_drawer_background">#5c4e4c4c</color>
   <color name="picker_background_grey">#b0bec5</color>
