--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,7 +26,7 @@
   </style>
 
   <style name="PrefsText">
-    <item name="android:textColor">@android:color/white</item>
+    <item name="android:textColor">@android:color/black</item>
     <item name="android:layout_width">0dp</item>
     <item name="android:layout_height">wrap_content</item>
     <item name="android:layout_weight">1</item>
